# message-broker

./: .env.example  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  docker-compose.yml  load_gen.toml  prometheus.yml
cmake/: dependencies.cmake
config/: broker.toml  load_gen.toml  stress_test.toml
grafana/dashboards/: broker.json
grafana/provisioning/dashboards/: dashboards.yml
include/broker/: metrics.hpp  protocol.hpp  router.hpp  spsc_queue.hpp  tcp_gateway.hpp
src/: main.cpp  protocol.cpp  router.cpp  tcp_gateway.cpp
tests/: CMakeLists.txt  outbound_message_test.cpp  protocol_test.cpp  router_test.cpp  tcp_gateway_test.cpp
tools/: CMakeLists.txt  client.cpp  load_gen.cpp  publisher.cpp  stress_test.cpp  subscriber.cpp
